--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               <th scope="col">الطول (ب Cm)</th>
               <th scope="col">الوزن الأول (ب Kg)</th>
               <th scope="col">الوزن الحالي (ب Kg)</th>
+              <th scope="col">التغير (ب Kg)</th>
             </tr>
           </thead>
           <tbody>
