--- a/facebook.html
+++ b/facebook.html
@@ -59,10 +59,7 @@
   <section>
     <div class="container">
       <div class="row align-items-center">
-        <div id="status">
-          Click on Below Image to start the demo: <br/>
-         <img src="http://hayageek.com/examples/oauth/facebook/oauth-javascript/LoginWithFacebook.png" style="cursor:pointer;" onclick="Login()"/>
-         </div>
+        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
       </div>
     </div>
   </section>
