Updated Facebook button

--- a/facebook.html
+++ b/facebook.html
@@ -58,9 +58,19 @@
 
   <section>
     <div class="container">
-      <div class="row align-items-center">
-        <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+      <br /><br /><br />
+      <div class="row d-flex justify-content-center">
+        <div 
+              class="fb-login-button" 
+              data-width="" 
+              data-size="large" 
+              data-button-type="continue_with" 
+              data-layout="rounded" 
+              data-auto-logout-link="false" 
+              data-use-continue-as="true">
+        </div>
       </div>
+      <br /><br /><br />
     </div>
   </section>
 
