--- a/results.html
+++ b/results.html
@@ -29,7 +29,7 @@
     <div class="masthead-content">
       <div class="container">
         <h2 class="masthead-subheading mb-0">🦋الصيام المتقطع / طريقك للرشاقة🦋</h2>
-        <div class="row align-items-center">
+        <div class="row d-flex justify-content-center">
           <img class="user-picture" alt="User Picture">
         </div>
       </div>
